@@ -1,3 +1,13 @@
+2008-02-06T17:18	C.J. Adams-Collier <cjac@colliertech.org>
+	* src/Core/Targets/NAntTarget.cs
+	- re-formatted the license for an 80-column editor
+	- added myself to the copyright
+	- added a fix submitted by Gryc Ueusp <gryc.ueusp@gmail.com>
+	* src/Core/Targets/AutotoolsTarget.cs
+	- updated copyright to include 2008
+	* THANKS
+	- created file, added Gryc Ueusp <gryc.ueusp@gmail.com>
+
 2008-01-01T14:50	C.J. Adams-Collier <cjac@colliertech.org>
 	* src/data/autotools.xml
 	- fixed .resx -> .resource compilation
